2005-03-07  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* src/searchwindow.c: Sort search results by distance from user, starting with closest.  Also set zoomlevel based on type of result (road, city, state).
	* src/mainwindow.c: Add mainwindow_set_zoomlevel() and mainwindow_get_centerpoint() functions for searchwindow's use.
	* src/map.c: Uncomment map_get_distance_in_meters() for use by searchwindow.
	* src/search_road.c: Suggest zoomlevel of 3 for road search results.

2005-03-06  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* src/mainwindow.c: Scroll once when user clicks map border.  Change map drag mouse cursor to closed hand.
	* src/map_draw_cairo.c: Fix halo drawing.

2005-03-05  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* README: Provide URL to Wiki for help with compiling.
	* src/mainwindow.c: Use 'implicit pointer grab' instead of gdk_pointer_grab() due to bitching of Carl, Owen and Keith :)
	* src/map_draw_gdk.c: Better support for dashed lines (not complete).

2005-03-04  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* src/mainwindow.c: Added click-and-hold to scroll at map window edge.
	* src/map_draw_cairo.c: Switch from cairo_text_path/cairo_fill to cairo_show_text.  Much faster!
	* src/map_draw_gdk.c: Switch from hardcoding GDK_CAP_BUTT line ends to GDK_CAP_PROJECTING.
	* src/searchwindow.c: Auto-show sidebar and choose search results tab on search.  Preview search result on select (no need to double-click).

2005-03-03  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>
	
	* src/*.c: Use gtk/gtk.h instead of gnome.h where possible.
	* src/mainwindow.c: Added map dragging and scroll wheel zooming.  Made sure all callbacks start with mainwindow_
	* src/map.c: Allow draw flags to allow caller to specify which map elements get drawn.
	* src/map_draw_*: Respect draw flags.

2005-03-03  Nathan Fredrickson  <nathan@silverorange.com>
	* configure.ac: Enable directives to disable deprecated features.